# embuild

./: CHANGELOG.md  Cargo.toml
cargo-pio/: Cargo.toml
cargo-pio/src/: main.rs
ldproxy/: Cargo.toml
ldproxy/src/: main.rs
src/: bindgen.rs  bingen.rs  build.rs  cmd.rs  espidf.rs  git.rs  pio.rs  python.rs  symgen.rs  utils.rs
src/cli/: arg.rs  parse_args.rs  separate_args.rs
src/cmake/file_api/: cache.rs  codemodel.rs  index.rs  toolchains.rs
