[workspace]
members = ["cargo-pio", "ldproxy"]

[package]
name = "embuild"
version = "0.33.1"
authors = [
    "Ivan Markov <ivan.markov@gmail.com>",
    "Dominik Gschwind <dominik.gschwind99@gmail.com>",
]
edition = "2024"
rust-version = "1.85"
categories = ["embedded", "development-tools::build-utils"]
keywords = ["cargo", "platformio", "build-dependencies"]
description = "A build support library for embedded Rust"
repository = "https://github.com/ivmarkov/embuild"
license = "MIT OR Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

# Platformio support
pio = [
    "ureq",
    "bindgen",
    "tempfile",
    "which",
    "manifest",
    "serde",
    "serde_json",
]
# cmake file-api & utilities
cmake = ["dep-cmake", "tempfile", "bindgen", "serde", "serde_json", "strum"]
# glob utilities
glob = ["globwalk"]
# Cargo.toml and config.toml utilities
manifest = ["cargo_toml", "toml"]
# esp-idf installer
espidf = [
    "tempfile",
    "which",
    "git",
    "serde",
    "serde_json",
    "strum",
    "home",
    "regex",
]
# git utilities
git = ["remove_dir_all"]
# kconfig utilities
kconfig = ["serde", "serde_json"]
# elf manipulation
elf = ["xmas-elf"]

[dependencies]
anyhow = "1.0.100"
log = "0.4.28"
bitflags = "2.10.0"
shlex = "1.3.0"
thiserror = "2.0.17"
filetime = "0.2.26"

xmas-elf = { version = "0.10.0", optional = true }
home = { version = "0.5.12", optional = true }
strum = { version = "0.27.2", features = ["derive"], optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.145", optional = true }
toml = { version = "0.9.8", optional = true }
remove_dir_all = { version = "1.0.0", optional = true }
cargo_toml = { version = "0.22.3", optional = true }
which = { version = "8.0.0", optional = true }
globwalk = { version = "0.9.1", optional = true }
tempfile = { version = "3.23.0", optional = true }
ureq = { version = "3.1.4", optional = true }
bindgen = { version = "0.72.1", optional = true }
dep-cmake = { package = "cmake", version = "0.1.54", optional = true }
regex = { version = "1.12.2", optional = true, default-features = false, features = [
    "std",
] }
