[package]
name = "cargo-pio"
version = "0.27.0"
edition = "2024"
rust-version = "1.85"
authors = ["Ivan Markov <ivan.markov@gmail.com>", "Dominik Gschwind <dominik.gschwind99@gmail.com>"]
categories = ["embedded", "development-tools::cargo-plugins"]
keywords = ["cargo", "platformio"]
description = "Cargo<->PlatformIO integration: a cargo subcommand"
repository = "https://github.com/ivmarkov/embuild"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
embuild = { version = "0.34", path = "..", features = ["pio"] }
anyhow = {version = "1.0.100", features = ["backtrace"]}
log = "0.4.28"
env_logger = "0.11.8"
clap = { version = "4.5.51", features = ["derive"] }
tempfile = "3.23.0"
